[tool.poetry]
name = "ketcher-render-service"
version = "0.1.0"
description = "Backend service to render molfiles to SVG using Ketcher"
authors = ["Peter Krauß <peter.krauss@kit.edu>"]

[tool.poetry.dependencies]
python = "3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
selenium = "^4.3.0"
hypercorn = "^0.13.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"
pylint = "^2.14.5"
pytest = "^7.1.2"
isort = "^5.10.1"
devtools = {extras = ["pygments"], version = "^0.8.0"}
autoflake = "^1.4"
pyinstaller = "^5.3"
types-selenium = "^3.141.9"
urllib3 = "^1.26.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = false
